Placeholder player name change

--- a/create-game-2.html
+++ b/create-game-2.html
@@ -393,7 +393,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -414,7 +414,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -435,7 +435,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -456,7 +456,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -477,7 +477,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -498,7 +498,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -645,7 +645,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar" onclick="window.location.href='selected-profile.html'">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
@@ -668,7 +668,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar" onclick="window.location.href='selected-profile.html'">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
