--- a/find-players.html
+++ b/find-players.html
@@ -63,7 +63,7 @@
             <h4 class="span-green">Send a message to</h4>
             <div class="player">
                 <img src="players/player1.png" alt="">
-                <p class="player-name">Smoke Mardeljano</p>
+                <p class="player-name">Sam Peters</p>
             </div>
             <textarea name="" id="" placeholder="Write a message"></textarea>
             <button class="green-button send-msg-btn-popup">Send</button>
@@ -259,7 +259,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -280,7 +280,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -301,7 +301,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -322,7 +322,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -343,7 +343,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -364,7 +364,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
