--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h4 class="span-green">Send a message to</h4>
             <div class="player">
                 <img src="players/player1.png" alt="">
-                <p class="player-name">Smoke Mardeljano</p>
+                <p class="player-name">Sam Peters</p>
             </div>
             <textarea name="" id="" placeholder="Write a message"></textarea>
             <button class="green-button send-msg-btn-popup">Send</button>
@@ -1178,7 +1178,7 @@
                 <div class="player-box">
                     <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5  onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5  onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
@@ -1187,7 +1187,7 @@
                 <div class="player-box">
                     <img src="players/player2.png" alt="player"  onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5  onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5  onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
@@ -1196,7 +1196,7 @@
                 <div class="player-box">
                     <img src="players/player3.png" alt="player"  onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5  onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5  onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
@@ -1205,7 +1205,7 @@
                 <div class="player-box">
                     <img src="players/player4.png" alt="player"  onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5 onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5 onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
@@ -1214,7 +1214,7 @@
                 <div class="player-box">
                     <img src="players/player3.png" alt="player"  onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5  onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5  onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
@@ -1223,7 +1223,7 @@
                 <div class="player-box">
                     <img src="players/player2.png" alt="player"  onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5  onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5  onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
@@ -1232,7 +1232,7 @@
                 <div class="player-box">
                     <img src="players/player4.png" alt="player"  onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5  onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5  onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
@@ -1241,7 +1241,7 @@
                 <div class="player-box">
                     <img src="players/player1.png" alt="player"  onclick="window.location.href='selected-profile.html'">
                     <div class="player-info">
-                        <h5  onclick="window.location.href='selected-profile.html'">Smoke Mardeljano</h5>
+                        <h5  onclick="window.location.href='selected-profile.html'">Sam Peters</h5>
                         <p>Belgrade, Serbia<br>188cm<span>/</span>age 29</p>
                     </div>
                     <button class="send-msg-btn">Message</button>
