--- a/rebook-request.html
+++ b/rebook-request.html
@@ -266,7 +266,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -287,7 +287,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -308,7 +308,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -329,7 +329,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -350,7 +350,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -371,7 +371,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
