--- a/selected-indoor-court.html
+++ b/selected-indoor-court.html
@@ -464,7 +464,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
@@ -487,7 +487,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
