--- a/selected-outdoor-court.html
+++ b/selected-outdoor-court.html
@@ -439,7 +439,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -460,7 +460,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -481,7 +481,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -502,7 +502,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -523,7 +523,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -544,7 +544,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -580,7 +580,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
@@ -603,7 +603,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
