--- a/selected-profile.html
+++ b/selected-profile.html
@@ -63,7 +63,7 @@
             <h4 class="span-green">Send a message to</h4>
             <div class="player">
                 <img src="players/player1.png" alt="">
-                <p class="player-name">Smoke Mardeljano</p>
+                <p class="player-name">Sam Peters</p>
             </div>
             <textarea name="" id="" placeholder="Write a message"></textarea>
             <button class="green-button send-msg-btn-popup">Send</button>
