--- a/slot-details-confirmed.html
+++ b/slot-details-confirmed.html
@@ -387,7 +387,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -415,7 +415,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -443,7 +443,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -471,7 +471,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -499,7 +499,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -527,7 +527,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
