--- a/confirmed-players-list.html
+++ b/confirmed-players-list.html
@@ -114,7 +114,7 @@
             <h4 class="span-green">Send a message to</h4>
             <div class="player">
                 <img src="players/player1.png" alt="">
-                <p class="player-name">Smoke Mardeljano</p>
+                <p class="player-name">Sam Peters</p>
             </div>
             <textarea name="" id="" placeholder="Write a message"></textarea>
             <button class="green-button send-msg-btn-popup">Send</button>
@@ -251,7 +251,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -272,7 +272,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -293,7 +293,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -314,7 +314,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -335,7 +335,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -356,7 +356,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                         <div class="player-info-invite">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
