--- a/selected-players-needed-slot.html
+++ b/selected-players-needed-slot.html
@@ -63,7 +63,7 @@
             <h4 class="span-green">Send a message to</h4>
             <div class="player">
                 <img src="players/player1.png" alt="">
-                <p class="player-name">Smoke Mardeljano</p>
+                <p class="player-name">Sam Peters</p>
             </div>
             <textarea name="" id="" placeholder="Write a message"></textarea>
             <button class="green-button send-msg-btn-popup">Send</button>
@@ -384,7 +384,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -405,7 +405,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -426,7 +426,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -447,7 +447,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -468,7 +468,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -489,7 +489,7 @@
                     <div class="player-box-invite">
                         <img src="players/player1.png" alt="player" onclick="window.location.href='selected-profile.html'">
                         <div class="player-info-invite" onclick="window.location.href='selected-profile.html'">
-                            <h5>Smoke Mardeljano</h5>
+                            <h5>Sam Peters</h5>
                             <p>Belgrade, Serbia</p>
                         </div>
                         <div class="player-height-years">
@@ -616,7 +616,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
@@ -639,7 +639,7 @@
                     <img src="players/player4.png" alt="avatar" class="avatar">
                     <div class="comment-content">
                         <h5 class="player-name">
-                            Smoke Mardeljano
+                            Sam Peters
                         </h5>
                         <p class="date-of-comment">July 2020</p>
                         <p class="comment">
