--- a/slot-details-invited-player.html
+++ b/slot-details-invited-player.html
@@ -276,7 +276,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -297,7 +297,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -318,7 +318,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -339,7 +339,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -360,7 +360,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -381,7 +381,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
