--- a/slot-details-pending.html
+++ b/slot-details-pending.html
@@ -290,7 +290,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -318,7 +318,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -346,7 +346,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -374,7 +374,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -402,7 +402,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
@@ -430,7 +430,7 @@
                 <div class="player-box-invite">
                     <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
-                        <h5>Smoke Mardeljano</h5>
+                        <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
                     </div>
                     <div class="player-height-years">
