--- a/notifications.html
+++ b/notifications.html
@@ -261,7 +261,7 @@
                         <span>5 of 11 confirmed players</span>
                     </div>
                     <div class="buttons">
-                        <button class="accept">Accept</button>
+                        <button onclick="location.href='slot-details-invited-player.html'" class="accept">Accept</button>
                         <button class="decline">Decline</button>
                     </div>
                     <div class="more">
@@ -284,7 +284,7 @@
                         <span>5 of 11 confirmed players</span></p>
                     </div>
                     <div class="buttons">
-                        <button class="accept">Accept</button>
+                        <button onclick="location.href='slot-details-invited-player.html'" class="accept">Accept</button>
                         <button class="decline">Decline</button>
                         <div class="price-system">
                             <span class="price-info">
@@ -359,7 +359,7 @@
                         <span class="span-green">BOOKING WITH 5 PLAYERS</span></p>
                     </div>
                     <div class="buttons">
-                        <button class="accept">Accept</button>
+                        <button onclick="location.href='slot-details-invited-player.html'" class="accept">Accept</button>
                         <button class="decline">Decline</button>
                         <div class="price-system">
                             <p>New price</p>
@@ -389,7 +389,7 @@
                         <span>6 players needed</span></p>
                     </div>
                     <div class="buttons">
-                        <button class="accept">Accept</button>
+                        <button onclick="location.href='slot-details-invited-player.html'" class="accept">Accept</button>
                         <button class="decline">Decline</button>
                         <div class="price-system">
                             <div class="price-info">
@@ -581,7 +581,7 @@
                         <span>5 of 11 confirmed players</span>
                     </div>
                     <div class="buttons">
-                        <button class="accept">Accept</button>
+                        <button onclick="location.href='slot-details-invited-player.html'" class="accept">Accept</button>
                         <button class="decline">Decline</button>
                     </div>
                     <div class="more">
@@ -603,7 +603,7 @@
                         <span>7 confirmed players</span></p>
                     </div>
                     <div class="buttons">
-                        <button class="accept">Accept</button>
+                        <button onclick="location.href='slot-details-invited-player.html'" class="accept">Accept</button>
                         <button class="decline">Decline</button>
                         <div class="buttons button-view-details">
                             <a href="rebook-request.html" class="go-to-chat view-payments">View slot details</a>
@@ -629,7 +629,7 @@
                         <span>to <span class="span-black">Wed, Oct 10 / 08AM - 10AM</span></span></p>
                     </div>
                     <div class="buttons">
-                        <button class="accept">Accept</button>
+                        <button onclick="location.href='slot-details-invited-player.html'" class="accept">Accept</button>
                         <button class="decline">Decline</button>
                     </div>
                     <div class="more">
