--- a/slot-details-invited-player.html
+++ b/slot-details-invited-player.html
@@ -252,7 +252,7 @@
 
             <div class="change-or-pay accept-decline">
                 <div class="buttons">
-                    <button class="green-button">Accept</button>
+                    <button onclick="location.href='messages.html'" class="green-button">Accept</button>
                     <button class="green-button decline-button">Decline</button>
                 </div>
                 <div class="accept-decline-text">
