selected profile routing

--- a/slot-details-confirmed.html
+++ b/slot-details-confirmed.html
@@ -385,7 +385,7 @@
 
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
+                    <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                     <div class="player-info-invite">
                         <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
@@ -413,7 +413,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
+                    <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                     <div class="player-info-invite">
                         <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
@@ -441,7 +441,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
+                    <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                     <div class="player-info-invite">
                         <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
@@ -469,7 +469,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
+                    <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                     <div class="player-info-invite">
                         <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
@@ -497,7 +497,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
+                    <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                     <div class="player-info-invite">
                         <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
@@ -525,7 +525,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
+                    <img src="players/player1.png" alt="player" onclick="location.href='selected-profile.html'">
                     <div class="player-info-invite">
                         <h5>Sam Peters</h5>
                         <p>Belgrade, Serbia</p>
